--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
+
+@layer base {
+  h1 {
+    @apply mb-5;
+  }
+}
+
 @tailwind components;
+
+@layer components {
+  .card {
+    @apply bg-gray-900 dark:bg-gray-100 text-white dark:text-gray-900 rounded-md p-4;
+  }
+}
+
 @tailwind utilities;
